# inf8601-labo01

./: .guix.scm  CMakeLists.txt  README-specs.asc  README.asc  README.html
data/: generate-random
include/: matchers.hpp
matcher/: main.cpp  matchers.cpp
source/: filter.c  main.c  pipeline-pthread.c  pipeline-serial.c  pipeline-tbb.cpp  queue.c
